* BUG#6425 Update link batch select_ids API

Version 1.12 - 2017-04-28
* FEA#0000 Allow to have several waiting accounts for an insurer (one per product for example)
* FEA#0000 Allow to have several waiting accounts for an insurer (one per product for example) to generate several insurer invoices
* FEA#0000 Adding the chain batch

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Add test scenario

Version 1.3 - 2015-01-22
* FEA#0000 Module creation